[gd_scene load_steps=7 format=3 uid="uid://c447fg3ulbkov"]

[ext_resource type="PackedScene" uid="uid://crgn3117blgd3" path="res://Map/World_1.tscn" id="1_7lr0t"]
[ext_resource type="Script" path="res://Scene/Game.gd" id="1_gvprj"]
[ext_resource type="PackedScene" uid="uid://ctvwhuaw7cf12" path="res://Character/Player/player_body_2d.tscn" id="2_tqtfs"]
[ext_resource type="PackedScene" uid="uid://ujpdonceu8hc" path="res://Character/Enemy/Snail/snail_body_2d.tscn" id="4_hdtt8"]
[ext_resource type="PackedScene" uid="uid://chq3q0qoikgjb" path="res://Character/Enemy/NightBorne/NightBorne_body_2d.tscn" id="6_6hf8a"]
[ext_resource type="PackedScene" uid="uid://dtt62w2oonq1r" path="res://Items/Coin/coin_2d.tscn" id="6_6n35d"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gvprj")

[node name="Node2D" parent="." instance=ExtResource("1_7lr0t")]

[node name="SnailBody2d" parent="." instance=ExtResource("4_hdtt8")]
position = Vector2(-189, -22)

[node name="PlayerBody2D" parent="." instance=ExtResource("2_tqtfs")]
position = Vector2(39, -39)

[node name="Coin2D" parent="." instance=ExtResource("6_6n35d")]
position = Vector2(55, -23)

[node name="NightBorneBody2D" parent="." instance=ExtResource("6_6hf8a")]
position = Vector2(104, -30)

[connection signal="on_dead" from="." to="." method="_on_on_dead"]
